--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,8 @@
-
 DFToolBox
+~~~~~~~~~
 
-- fixed mp3 and wav playback, now using Windows functions instead of SDL
-
-
-DFToolBox
-- simple bundle reader (parsing only)
+- bookmark loading/saving
+- fixed mp3 and wav playback, now using Windows functions instead of
+  SDL
 
 # EOF #
